# Robot_arm_with_object_identification

./: .gitignore  README.md  commands.txt
log/: latest_build
src/arm_bot_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/arm_bot_description/config/: arm_bot_control.yaml
src/arm_bot_description/launch/: controllers.launch.py  display.launch.py  gazebo.launch.py
src/arm_bot_description/meshes/: base_link.stl  jaw_1_1.stl  jaw_2_1.stl  link_1_1.stl  link_2_1.stl  link_3_1.stl  link_4_1.stl  link_5_1.stl
src/arm_bot_description/scripts/: control_robot.py
src/arm_bot_description/urdf/: arm_bot.gazebo  arm_bot.trans  arm_bot.xacro  materials.xacro
src/moveit_config/: .setup_assistant  package.xml
src/moveit_config/config/: arm_bot.ros2_control.xacro  arm_bot.srdf  arm_bot.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/moveit_config/scripts/: position_move_script.py
src/my_gazebo_worlds/: CMakeLists.txt  package.xml  setup.py
src/my_gazebo_worlds/config/: robot_controllers.yaml  robot_controllers_simple.yaml
src/my_gazebo_worlds/launch/: gazebo.launch.py  gazebo_launch.py  robot_arm_launch.py  robot_arm_with_control.launch.py  spawn_robot_launch.py
src/my_gazebo_worlds/meshes/: base_link.stl  base_link.stl:Zone.Identifier  jaw_1_1.stl:Zone.Identifier  jaw_2_1.stl  jaw_2_1.stl:Zone.Identifier  link_1_1.stl  link_1_1.stl:Zone.Identifier  link_4_1.stl  link_5_1.stl:Zone.Identifier
src/my_gazebo_worlds/scripts/: move_robot_arm.py  send_joint_commands.py
src/my_gazebo_worlds/urdf/: robot_arm.urdf  robot_arm_simple.urdf
src/my_gazebo_worlds/worlds/: my_world.world  my_worldtwo.world
src/my_robotic_arm/: CMakeLists.txt  package.xml
src/my_robotic_arm/launch/: spawn_robot_launch.py  spawn_robotic_arm_launch.py
src/my_robotic_arm/meshes/: jaw_1_1.stl  link_2_1.stl  link_2_1.stl:Zone.Identifier  link_3_1.stl  link_3_1.stl:Zone.Identifier  link_4_1.stl:Zone.Identifier  link_5_1.stl
src/my_robotic_arm/urdf/: materials.xacro  my_robotic_arm.urdf  robot_arm.gazebo  robot_arm.trans  robot_arm.urdf  robot_arm.xacro
src/my_robotic_arm_moveit_config/: CMakeLists.txt  package.xml
src/my_robotic_arm_moveit_config/config/: controllers.yaml  robot_arm.urdf
src/my_robotic_arm_moveit_config/config/srdf/: my_robotic_arm.srdf
src/my_robotic_arm_moveit_config/launch/: move_group.launch.py  rviz.launch.py
src/shape_detection/: CMakeLists.txt  package.xml  setup.py
src/shape_detection/launch/: shape_detection_launch.py
src/shape_detection/scripts/: select_object_pick.py  shape_detection_node.py
src/shape_detection/shape_detection/: shape_detection_node.py
src/shape_detection/shape_detection_ML/: pre_process_images.py  shape_detection_CNN.py  train_shape_detection_CNN.py
