<?xml version="1.0"?>
<package format="3">
  <name>my_gazebo_worlds</name>
  <version>0.0.0</version>
  <description>My Gazebo Worlds</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>ros2_control</build_depend>
  <build_depend>effort_controllers</build_depend>
  <build_depend>joint_state_broadcaster</build_depend>
  <build_depend>gazebo_ros2_control</build_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
